# pearbot

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  agents.py  auth.py  main.py  prompts.py  pyproject.toml  storage.py
.github/workflows/: ci.yml
src/: __init__.py  agents.py  auth.py  main.py  model.py  ollama_utils.py  pearbot.py  prompts.py  prompts.yaml  review_github.py  review_local.py  utils.py
tests/: test_basic.py
